--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bonjour",
-  "version": "3.5.0",
+  "name": "@jelodee/bonjour",
+  "version": "3.5.1",
   "description": "A Bonjour/Zeroconf implementation in pure JavaScript",
   "main": "index.js",
   "dependencies": {
@@ -8,7 +8,7 @@
     "deep-equal": "^1.0.1",
     "dns-equal": "^1.0.0",
     "dns-txt": "^2.0.2",
-    "multicast-dns": "^6.0.1",
+    "multicast-dns": "^7.2.2",
     "multicast-dns-service-types": "^1.1.0"
   },
   "devDependencies": {
@@ -21,7 +21,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/watson/bonjour.git"
+    "url": "https://github.com/jelodee/bonjour.git"
   },
   "keywords": [
     "bonjour",
